# ningyotsukai

./: Cargo.toml  README.md  TODO.md  build.rs
ningyo-binding/: Cargo.toml
ningyo-binding/src/: binding.rs  exec.rs  lib.rs  tracker.rs  vts.rs
ningyo-binding/src/vts/: data.rs
ningyo-extensions/: Cargo.toml
ningyo-extensions/src/: gtk_ext.rs  lib.rs
ningyo-extensions/src/gtk_ext/: gl_area.rs  widget.rs
ningyo-gtk-wgpu/: Cargo.toml
ningyo-gtk-wgpu/src/: error.rs  lib.rs  texshare.rs  widget.rs
ningyo-gtk-wgpu/src/texshare/: linux.rs  vulkan.rs  wgpu.rs  windows.rs
ningyo-gtk-wgpu/src/widget/: class.rs  subclass.rs
ningyo-look-and-feel/: Cargo.toml
ningyo-look-and-feel/src/: generic.rs  lib.rs  look-and-feel.css  resources.gresource.xml  windows-look-and-feel.css  windows.rs
ningyo-render-wgpu/: Cargo.toml  build.rs
ningyo-render-wgpu/src/: buffer_builder.rs  lib.rs  renderer.rs  resources.rs  shader.rs  texture.rs  uploads.rs
ningyo-render-wgpu/src/shaders/: mipmap_gen.frag  mipmap_gen.vert
ningyo-spout2/: Cargo.toml
ningyo-spout2/examples/: spout2_dump.rs
ningyo-spout2/src/: error.rs  event.rs  lib.rs  name.rs  receiver.rs  registry.rs  semaphore.rs  sender.rs  shm.rs
ningyo-texshare/: Cargo.toml
ningyo-texshare/src/: lib.rs  linux.rs  texture.rs  wgpu.rs  windows.rs
ningyo-texshare/src/dx12/: conv.rs  ext.rs  mod.rs
ningyo-texshare/src/vulkan/: conv.rs  ext.rs  image.rs
ningyotsukai/: Cargo.toml
ningyotsukai/src/: document.rs  io.rs  main.rs  panels.rs  resources.gresource.xml  stage.rs  style.css  tracker.rs
ningyotsukai/src/bindings/: form.rs  form.ui  panel.rs
ningyotsukai/src/document/: controller.rs  controller.ui  manager.rs  mod.rs  model.rs
ningyotsukai/src/io/: comm.rs  error.rs  main.rs  vts.rs
ningyotsukai/src/io/vts/: data.rs  proc.rs
ningyotsukai/src/panels/: dock.rs  dock.ui  frame.css  frame.rs  frame.ui  page_ref.rs
ningyotsukai/src/render/: comm.rs  main.rs  mod.rs  offscreen.rs  pipewire.rs  spout.rs  traits.rs
ningyotsukai/src/stage/: border.rs  gestures.rs  gizmos.rs  model.rs  puppet.rs  renderer.rs  stage.css  widget.rs
ningyotsukai/src/stage/gestures/: drag.rs  resize.rs  select.rs  zoom.rs
ningyotsukai/src/stage/gizmos/: border.rs  dragsel.rs  origin.rs  puppet.rs  selection.rs
ningyotsukai/src/stage/model/: coord.rs  puppet.rs  stage.rs
ningyotsukai/src/stage/renderer/: opengl.rs  wgpu.rs
ningyotsukai/src/tracker/: cookie.rs  form.rs  form.ui  manager.rs  model.rs  panel.rs  panel.ui  reference.rs
ningyotsukai/src/tracker/params/: panel.rs
ningyotsukai/src/window/: controller.rs  controller.ui
puppet-inspector/: Cargo.toml
puppet-inspector/resources/: resources.gresource.xml
puppet-inspector/src/: document.rs  main.rs  render_preview.rs  style.css
puppet-inspector/src/detail_views/: search.css
puppet-inspector/src/detail_views/metadata/: inspector.ui
puppet-inspector/src/detail_views/node/: inspector.ui
puppet-inspector/src/detail_views/param/: inspector.rs
puppet-inspector/src/document/: controller.ui  state.rs
puppet-inspector/src/navigation/: json_index.rs
puppet-inspector/src/render_preview/: window.rs  window.ui
puppet-inspector/src/window/: controller.css  controller.ui
resources/: document.ui  inox_render_preview.ui  look-and-feel.css  node_search.ui  resources.gresource.xml  window.ui  windows-look-and-feel.css
src/: detail_views.rs  document.rs  lib.rs  look_and_feel.rs  main.rs  navigation.rs  navigation_item.rs  pipeline.rs  shader.rs  texture.rs  window.rs
src/detail_views/: inox_render_preview.rs  json.rs  param.rs  physics.rs  puppet.rs
src/detail_views/json/: inspector.rs  pathing.rs
src/detail_views/node/: inspector.rs  search.rs
src/detail_views/param/: inspector.rs  inspector.ui  search.rs
src/detail_views/physics/: inspector.rs  inspector.ui
src/document/: controller.rs  state.rs
src/look_and_feel/: generic.rs  windows.rs
src/navigation/: enums.rs  json_path.rs  path.rs
src/render_preview/: window.rs
src/shaders/: dbg.vert  dbgline.frag  dbgpoint.frag  lighting.frag  mask.vert  scene.frag  scene.vert
src/shaders/basic/: anim.vert  basic-mask.frag  basic.frag  basic.vert  composite-mask.frag  composite.frag  composite.vert
src/window/: controller.rs
