[package]
name = "inox2d-wgpu"
description = "WGPU renderer for Inox2D"
authors = ["Arcturus Emrys"]
version = "0.3.0"
edition = "2024"
repository = "https://github.com/Inochi2D/inox2d"
license = "BSD-2-Clause"
keywords = ["gamedev", "graphics", "inochi2d", "vtuber", "opengl"]
categories = ["graphics", "rendering"]

[dependencies]
inox2d = { path = "../inox2d", version = "0.3.0" }
wgpu = "28.0.0"
thiserror = "1.0.39"

[build-dependencies]
shaderc = { version = "0.10", features=["build-from-source"] }