[package]
name = "ningyo-binding"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"
authors = ["Arcturus Emrys <aemrys@arcturus.live>"]

[dependencies]
json = "0.12.4"
inox2d = { git = "https://github.com/ArcturusEmrys/inox2d", rev = "460be0bac4b050bad9a323416ecacfebf5c3b557" }
glam = "0.29.0"
ningyo-extensions = { path = "../ningyo-extensions" }
mlua = { version = "0.11.6", features = ["lua55", "vendored", "send"] }