[package]
name = "ningyotsukai"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"
description = "A virtual puppetry performance recording tool."
authors = ["Arcturus Emrys <aemrys@arcturus.live>"]

[dependencies]
json="0.12.4"
smol="2.0.2"
thiserror="2.0.18"
glib = { version = "0.22.0" }
gio = { version = "0.22.1" }
gsk4 = { version = "0.11.0", features = ["v4_10"] }
graphene = { package="graphene-rs", version = "0.22.0" }
generational-arena = "0.2.9"
glow = "0.14.1"
gl46 = "0.2.1"
glam = "0.29.0"
inox2d = { git = "https://github.com/ArcturusEmrys/inox2d", rev = "8f97e9af23dab15c4aef92d376deded01b7479fb" }
inox2d-opengl = { git = "https://github.com/ArcturusEmrys/inox2d", rev = "8f97e9af23dab15c4aef92d376deded01b7479fb" }
ningyo-look-and-feel = { path = "../ningyo-look-and-feel" }
ningyo-extensions = { path = "../ningyo-extensions" }
ningyo-binding = { path = "../ningyo-binding" }
ningyo-texshare = { path = "../ningyo-texshare" }
renderdoc = { version = "0.12.1", optional = true }
mlua = { version = "0.11.6", features = ["send"] }
ningyo-gtk-wgpu = {path = "../ningyo-gtk-wgpu" }
ningyo-render-wgpu = {path = "../ningyo-render-wgpu" }
pollster = "0.4.0"
wgpu = { version = "29.0.0" }
wgpu-hal = { version = "29.0.0" }
env_logger = "0.11.10"
owning_ref = "0.4.1"

pipewire = { version = "0.9.2", optional=true }
libspa = { version = "0.9.2", optional=true }
libspa-sys = { version = "0.9.2", optional=true }
drm-fourcc = { version = "2.2.0", optional=true }

ningyo-spout2 = { path = "../ningyo-spout2", optional=true }

[target.'cfg(target_os="linux")'.dependencies]
gtk4 = { version = "0.11.0", features = ["v4_10"] }
gdk4 = { version = "0.11.0", features = ["v4_10"] }

[target.'cfg(windows)'.dependencies]
gtk4 = { version = "0.11.0", features = ["v4_20"] }
gdk4 = { version = "0.11.0", features = ["v4_20"] }

[target.'cfg(target_os="windows")'.dependencies.windows]
version = "0.62.2"
features = [
    "Win32_Graphics_Direct3D12",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11on12",
    "Win32_Graphics_Direct3D11"
]

[build-dependencies]
glib-build-tools = "0.22.0"

[features]
pipewire = ["dep:pipewire", "dep:libspa", "dep:libspa-sys", "dep:drm-fourcc"]
spout = ["dep:ningyo-spout2"]