[package]
name = "puppet-inspector"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"

[dependencies]
glib = { version = "0.22.0" }
gio = { version = "0.22.1" }
inox2d = { git = "https://github.com/ArcturusEmrys/inox2d", rev = "b92be8c7d12e3c790a4d6273a28399214720623b" }
inox2d-opengl = { git = "https://github.com/ArcturusEmrys/inox2d", rev = "b92be8c7d12e3c790a4d6273a28399214720623b" }
json = "0.12.4"
gl46 = "0.2.1"
ningyo-look-and-feel = { path = "../ningyo-look-and-feel" }
ningyo-extensions = { path = "../ningyo-extensions" }

[target.'cfg(not(windows))'.dependencies]
gtk4 = { version = "0.11.0", features = ["v4_10"] }
gdk4 = { version = "0.11.0", features = ["v4_10"] }

[target.'cfg(windows)'.dependencies]
gtk4 = { version = "0.11.0", features = ["v4_20"] }
gdk4 = { version = "0.11.0", features = ["v4_20"] }

[build-dependencies]
glib-build-tools = "0.22.0"
